feat: add css and more html

--- a/index.html
+++ b/index.html
@@ -4,36 +4,86 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Joshua's Website</title>
+    <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
-    <h1>Hello World</h1>
-    <p>
-      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Neque
-      repudiandae, necessitatibus iusto quia ipsam eos assumenda nostrum odit
-      voluptatum ipsum itaque culpa vel cupiditate dolorum, aspernatur esse
-      laborum quaerat corporis placeat, tempore ad asperiores unde animi. Sint
-      repellendus magni neque.
-    </p>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, eos!
-      Tenetur nostrum, optio quasi tempora error labore suscipit id
-      perspiciatis! Quasi facere minima sint officiis delectus quam cum vel sit?
-    </p>
+    <a class="skip-nav-link" href="#main-content">skip navigation</a>
+    <main id="main-content">
+      <h1>Hello World</h1>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Neque
+        repudiandae, necessitatibus iusto quia ipsam eos assumenda nostrum odit
+        voluptatum ipsum itaque <code>culpa vel cupiditate</code> dolorum,
+        aspernatur esse laborum quaerat corporis placeat, tempore ad asperiores
+        unde animi. Sint repellendus magni neque.
+      </p>
+      <section>
+        <h2>Site Features</h2>
 
-    <h2>Learning is Fun!</h2>
-    <ul>
-      <li>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit,
-        similique!
-      </li>
-      <li>
-        Consequatur eaque soluta neque illum iusto, sunt optio totam placeat.
-      </li>
-      <li>
-        Ex itaque magnam deleniti amet voluptatem dolorem cupiditate eius
-        aperiam!
-      </li>
-    </ul>
-    <button>Learn more</button>
+        <dl>
+          <dt>Responsive Layout</dt>
+          <dd>
+            Adapts fluidly to all screen sizes using flexible layout techniques.
+            Optimized for readability on mobile, tablet, and desktop.
+          </dd>
+
+          <dt>Accessible Typography</dt>
+          <dd>
+            Font sizes, spacing, and contrast meet or exceed WCAG AAA standards.
+            Improves legibility across devices and viewing conditions.
+          </dd>
+
+          <dt>Dark Mode Support</dt>
+          <dd>
+            Automatically switches styles based on user system preferences.
+            Maintains visual consistency and accessibility in both light and
+            dark themes.
+          </dd>
+
+          <dt>Component-Based Structure</dt>
+          <dd>
+            Built with reusable and flexible UI elements (headings, buttons,
+            content blocks) for easier scaling and maintenance.
+          </dd>
+
+          <dt>Utility-First Styling</dt>
+          <dd>
+            Styled entirely with utility-based CSS. Enables rapid development
+            without custom CSS bloat while keeping a consistent design language.
+          </dd>
+        </dl>
+      </section>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, eos!
+        <a href="https://www.example.com" target="_blank">Tenetur</a> nostrum,
+        optio quasi tempora error labore suscipit id perspiciatis! Quasi facere
+        minima sint officiis delectus quam cum vel sit?
+      </p>
+      <hr />
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt
+        ducimus consequatur nulla quo perspiciatis repudiandae rerum. Quaerat,
+        rem iusto praesentium unde, pariatur adipisci vel et at, enim molestias
+        repudiandae excepturi expedita! Expedita, libero iusto deleniti
+        repudiandae ex, dolor, excepturi ut alias obcaecati quae rerum provident
+        fugit enim autem suscipit!
+      </p>
+
+      <h2>Learning is Fun!</h2>
+      <ul>
+        <li>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit,
+          similique!
+        </li>
+        <li>
+          Consequatur eaque soluta neque illum iusto, sunt optio totam placeat.
+        </li>
+        <li>
+          Ex itaque magnam deleniti amet voluptatem dolorem cupiditate eius
+          aperiam!
+        </li>
+      </ul>
+      <button>Learn more</button>
+    </main>
   </body>
 </html>
